-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P3
-
Affects Version/s: hs25, 8
-
Component/s: hotspot
-
b02
-
generic
-
generic
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8000127 | 8 | Serguei Spitsyn | P3 | Resolved | Fixed | b58 |
Before the permgen removal the classes defined by a class loader could be found in the ClassLoader.classes Vector.
After the the permgen removal this vector is not populated anymore. Instead the GC finds the classes through C++ objects outside the heap.
This change breaks tests and code relying on FollowReference to find java.lang.Class instances from a java.lang.ClassLoader instance.
I think
nsk/jdi/ReferenceType/instances/instances004
also affected by this bug (or rather fixed by this fix).
After the the permgen removal this vector is not populated anymore. Instead the GC finds the classes through C++ objects outside the heap.
This change breaks tests and code relying on FollowReference to find java.lang.Class instances from a java.lang.ClassLoader instance.
I think
nsk/jdi/ReferenceType/instances/instances004
also affected by this bug (or rather fixed by this fix).
- backported by
-
JDK-8000127 NPG: FollowReferences has no ClassLoader -> Class link to follow
-
- Resolved
-
- duplicates
-
JDK-7195619 NPG: N-1 ClassLoaderReference.referringObjects() in permgen removal code
-
- Closed
-
-
JDK-7195620 NPG: Test VMMismatchException001 gets an java.lang.ArrayIndexOutOfBoundsException
-
- Closed
-
-
JDK-7169322 Move list of java_lang_Class mirrors to back to the Java class loader object
-
- Closed
-