7197269: NPG: FollowReferences has no ClassLoader -> Class link to follow

Restore java/lang/ClassLoader.addClass() upcall

Reviewed-by: sspitsyn, dcubed, jmasa